--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -74,13 +74,13 @@
 <br>
 
 <div class="footer">
-    <div class="container-fluid">
-    <div class="footer-copyright text-center py-3">© 2018 Copyright:
-        <a href="#"> MohdAsif</a>
+        <div class="container-fluid">
+        <div class="footer-copyright text-center py-3">
+            <a href="#"> FOOD SAM.</a>
+          </div>
+        
       </div>
-    
-  </div>
-</div>
+      </div>
 
 <script type="text/javascript" src="{%static 'webapp/js/jquery.min.js'%}">
 	</script>
