--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -110,7 +110,7 @@
 				<div class="row ">
 					<div class="col-sm-2 col-md-2">
 						<div class="thumbnail borders text-light">
-							<p>Choose <span>Your Restaurant</span></p>
+							<p>Choose <span>Your Chef....</span></p>
 						</div>
 					</div>
 					<div class="col-sm-2 col-md-2 ">
@@ -290,45 +290,14 @@
 <br>
 <
  
-  <footer id="gtco-footer" role="contentinfo" style="background-image: url(static/webapp/images/img_1.jpg)" data-stellar-background-ratio="0.5">
-		<div class="overlay"></div>
-		<div class="gtco-container">
-			<div class="row row-pb-md">
-
-				
-
-				
-				<div class="col-md-12 text-center">
-					<div class="gtco-widget">
-						<h3>Get In Touch</h3>
-						<ul class="gtco-quick-contact">
-							<li><a href="#"><i class="icon-phone"></i> +1 234 567 890</a></li>
-							<li><a href="#"><i class="icon-mail2"></i> info@GetTemplates.co</a></li>
-							<li><a href="#"><i class="icon-chat"></i> Live Chat</a></li>
-						</ul>
-					</div>
-					<div class="gtco-widget">
-						<h3>Get Social</h3>
-						<ul class="gtco-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-						</ul>
-					</div>
-				</div>
-
-				<div class="col-md-12 text-center copyright">
-					<p><small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://gettemplates.co/" target="_blank">GetTemplates.co</a> Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a></small></p>
-				</div>
-
-			</div>
-
-			
-
-		</div>
-	</footer>
+  <div class="footer">
+      <div class="container-fluid">
+      <div class="footer-copyright text-center py-3">
+          <a href="#"> FOOD SAM.</a>
+        </div>
+      
+    </div>
+    </div>
 	<!-- </div> -->
 
 	</div>
